# yast-storage

./: .cvsignore  .gitignore  .travis.yml  Dockerfile  MAINTAINER  POTFILES  README.md  RPMNAME  Rakefile  SUBDIRS  VERSION  configure.in.in  yast-storage.changes  yast2-storage.spec.in
agent-fdisk/src/: .cvsignore  AppUtil.cc  AppUtil.h  AsciiFile.cc  AsciiFile.h  DiskAcc.cc  DiskAcc.h  EvmsAccess.cc  EvmsAccess.h  EvmsAgent.cc  EvmsAgent.h  FdiskAcc.cc  FdiskAcc.h  FdiskAgent.cc  FdiskAgent.h  InterCmd.cc  InterCmd.h  LvmAccess.cc  LvmAccess.h  LvmAgent.cc  LvmAgent.h  Makefile.am  MdAccess.cc  MdAccess.h  MdAgent.cc  MdAgent.h  PartInfo.defs.h  PartedAcc.cc  PartedAcc.h  SystemCmd.cc  SystemCmd.h  Y2CCFdiskAgent.cc  Y2CCFdiskAgent.h  Y2CCLvmAgent.cc  Y2CCLvmAgent.h  Y2CCMdAgent.cc  Y2CCMdAgent.h  Y2CCStorageAgent.cc  Y2FdiskAgentComponent.cc  Y2FdiskAgentComponent.h  (+4 more)
agent-fdisk/testsuite/: .cvsignore  Makefile.am
agents-scr/: Makefile.am  cfg_storage.scr  dasddev.scr  etc_cryptotab.scr  etc_mtab.scr  parted_check.scr  parted_print.scr  pdisk.scr  proc_dasddev.scr  proc_meminfo.scr  proc_partitions.scr  proc_swaps.scr  run_swapon_s.scr  sysconfig_storage.scr
client-makefs/doc/autodocs/: Makefile.am
client-makefs/src/: .cvsignore  Ext2_Partition.cc  Ext2_Partition.h  Fat_Partition.cc  Fat_Partition.h  Jfs_Partition.cc  Jfs_Partition.h  Makefile.am  Partition.cc  Partition.h  Reiser_Partition.cc  Reiser_Partition.h  Xfs_Partition.cc  Xfs_Partition.h  Y2CCMakefs.cc  Y2CCMakefs.h  Y2MakefsComponent.cc  Y2MakefsComponent.h
client-makefs/testsuite/: .cvsignore  Makefile.am  testit.ycp
client-parted/doc/autodocs/: Makefile.am
client-parted/src/: Makefile.am  WIN_Partition.cc  WIN_Partition.h  Y2CCParted.cc  Y2CCParted.h  Y2PartedComponent.cc  Y2PartedComponent.h
client-parted/testsuite/: .cvsignore  Makefile.am  get_fat_partitions  testit.ycp
libstorage/bindings/ycp/: LibStorage.i  Makefile.am
libstorage/src/: AppUtil.cc  AppUtil.h  ArchInfo.cc  ArchInfo.h  AsciiFile.cc  AsciiFile.h  Blkid.cc  Btrfs.cc  BtrfsCo.cc  Container.cc  Container.h  Dasd.cc  Dasd.h  Dasdview.cc  DerefIterator.h  Device.cc  Disk.cc  Disk.h  Dm.cc  Dm.h  DmCo.cc  DmCo.h  DmPart.cc  DmPart.h  DmPartCo.cc  DmPartCo.h  Dmmultipath.cc  Dmmultipath.h  DmmultipathCo.cc  DmmultipathCo.h  Dmraid.cc  Dmraid.h  DmraidCo.cc  DmraidCo.h  Enum.cc  EtcFstab.cc  EtcFstab.h  EtcMdadm.cc  EtcRaidtab.cc  EtcRaidtab.h  (+72 more)
storage/bindings/src/: Makefile.am
storage/bindings/ycp/: LibStorage.i  Makefile.am
storage/src/: .cvsignore  Makefile.am  create_udev_cdrom.ycp  inst_custom_part.ycp  inst_disk.ycp  inst_disk_proposal.ycp  inst_do_resize.ycp  inst_evms.ycp  inst_lvm_lv.ycp  inst_lvm_pv.ycp  inst_part_proposal.ycp  inst_prepdisk.ycp  inst_resize_dialog.ycp  inst_resize_ui.ycp  inst_target_part.ycp  inst_target_selection.ycp  storage_finish.ycp
storage/src/include/: Makefile.am  auto_finish.ycp  auto_part_create.ycp  auto_part_functions.ycp  auto_part_prepare.ycp  auto_part_ui.ycp  custom_part_check_generated.ycp  custom_part_dialogs.ycp  custom_part_helptexts.ycp  custom_part_lib.ycp  custom_part_testdata.ycp  do_proposal.ycp  do_proposal_flexible.ycp  ep-all.ycp  ep-btrfs-dialogs.ycp  ep-btrfs-lib.ycp  ep-btrfs.ycp  ep-dialogs.ycp  ep-dm-dialogs.ycp  ep-dm-lib.ycp  ep-dm.ycp  ep-graph.ycp  ep-hd-dialogs.ycp  ep-hd-lib.ycp  ep-hd.ycp  ep-import.ycp  ep-lib.ycp  ep-log.ycp  ep-loop-dialogs.ycp  ep-loop-lib.ycp  ep-loop.ycp  ep-lvm-dialogs.ycp  ep-lvm-lib.ycp  ep-lvm.ycp  ep-main.ycp  ep-nfs.ycp  ep-raid-dialogs.ycp  ep-raid-lib.ycp  ep-raid.ycp  ep-settings.ycp  (+26 more)
storage/src/modules/: .cvsignore  AsciiFile.ycp  DevicesSelectionBox.ycp  DualMultiSelectionBox.ycp  FileSystems.ycp  Greasemonkey.ycp  Makefile.am  MiniWorkflow.ycp  Partitions.ycp  Region.ycp  Storage.ycp  StorageClients.ycp  StorageControllers.ycp  StorageDevices.ycp  StorageFields.ycp  StorageIcons.ycp  StorageInit.ycp  StorageProposal.ycp  StorageSettings.ycp  StorageUpdate.ycp  TabPanel.ycp  TreePanel.ycp  routines.ycp  storage_update.ycp
storage/src/proposal/: Makefile.am  partitions_proposal.ycp  proposal_partitions.ycp
storage/src/testsuite/: .cvsignore  Makefile.am  README  diff_out
test/: Makefile.am  Storage_test.rb  disk_worker_client_test.rb  filesystems_test.rb  format_target_map_test.rb  partitions_test.rb  ro_text_test.rb  snapper1.rb  spec_helper.rb  storage_boot_on_raid1.rb  storage_boot_on_raid1_test.rb  storage_get_disk_partition.rb  storage_get_disk_partition_test.rb  storage_snapper_configure_snapper_test.rb  storage_test.rb  storage_utils_configure_snapper_test.rb  subvol_test.rb  ui_ext_test.rb
test/fixtures/: btrfs_list_data_no_at.out  btrfs_list_srv.out  btrfs_list_srv_no_at.out  dmraid-ext4-boot-root.ycp  dmraid-ext4-boot-root.yml  dmraid-ext4-boot.ycp  dmraid-ext4-boot.yml  gpt-boot-fat.ycp  gpt-boot-fat.yml  gpt-boot-raid0.ycp  gpt-boot-raid0.yml  gpt-boot-raid1.ycp  gpt-boot-raid1.yml  gpt-btrfs-boot.ycp  gpt-btrfs-boot.yml  gpt-btrfs.ycp  gpt-btrfs.yml  gpt-ppc-btrfs.ycp  gpt-ppc-btrfs.yml  gpt-root-raid0.ycp  gpt-root-raid0.yml  gpt-root-raid1.ycp  gpt-root-raid1.yml  msdos-boot-fat.ycp  msdos-boot-fat.yml  msdos-btrfs-shadowed-twice.ycp  msdos-btrfs-shadowed-twice.yml  msdos-btrfs-shadowed.ycp  msdos-btrfs-shadowed.yml  msdos-ext4-boot-root.ycp  msdos-ext4-boot-root.yml  msdos-ext4-boot.ycp  msdos-ext4-boot.yml  msdos-hfs.ycp  msdos-hfs.yml  msdos-root-fat.ycp  msdos-root-fat.yml  subvolumes-no-root.yml  subvolumes.yml
test/include/: ep-lvm-lib_test.rb  partitioning_custom_part_check_generated_include_test.rb
test/lib/: storage_shadowed_vol_helper_test.rb
test/storage/: snapshots_finish_test.rb
test/ystorage/: snapshots_finish_test.rb
testsuite/data/: Makefile.am
testsuite/data/bsc-988526/: Makefile.am  disk_dasda.info
testsuite/data/bsc-991252/: Makefile.am  arch.info  disk_sda.info  free.info
testsuite/data/empty-big/: Makefile.am
testsuite/data/empty-big-ppc64le/: Makefile.am  arch.info  disk_sda.info
testsuite/data/empty-big-ppc64le-nv/: Makefile.am
testsuite/data/lvm/: Makefile.am  (+2 more)
(+536 files in other folders)
