#
# Makefile.am for storage/agents
#
# $Id$
#

scrconf_DATA = etc_cryptotab.scr \
               pdisk.scr	 \
	       proc_meminfo.scr  \
	       parted_check.scr  \
	       proc_swaps.scr	 \
	       dasddev.scr  	 \
	       parted_print.scr  \
	       run_swapon_s.scr

EXTRA_DIST = $(scrconf_DATA)
