#
# Makefile.am for storage/storage/src/testsuite/data
#

SUBDIRS = empty empty-efi half-empty reuse-home windows windows-only		\
	windows-only-no-resize windows-only-efi empty-s390x empty-ppc64le	\
	empty-small empty-big empty-big-ppc64le lvm empty-ppc64le-nv            \
	empty-big-ppc64le-nv bsc-988526 bsc-991252

