#
# Makefile.am for y2m_inst/ycp/partitioning/include
#

yncludedir = @yncludedir@/partitioning

ynclude_HEADERS = \
	partition_defines.ycp		\
	custom_part_testdata.ycp	\
	custom_part_check_generated.ycp	\
	custom_part_helptexts.ycp	\
	custom_part_dialogs.ycp		\
	custom_part_lib.ycp		\
	propose_create_target.ycp	\
	propose_part_util.ycp		\
	propose_slot_util.ycp		\
	auto_part_create.ycp		\
	auto_part_functions.ycp		\
	auto_part_prepare.ycp		\
	auto_part_ui.ycp		\
	auto_finish.ycp			\
	write_fstab.ycp			\
	target_modify.ycp		\
	lvm_lib.ycp  			\
	raid_ui.ycp  			\
	raid_lib.ycp  			\
	lvm_lv_lib.ycp  		\
	lvm_pv_lib.ycp  		\
	lvm_ui_dialogs.ycp  		\
	lvm_ui_lib.ycp			\
	loop.ycp			\
	do_proposal.ycp

EXTRA_DIST = $(ynclude_HEADERS)
